manually merge. #49 cannot cherry-pick from master :a061eecd50caaad313ca8a4cbc5cab180c0dfe7d 1887f44b1bc1c478696ae8cf1e98334bf9467cc6 8f263a8c3b5a6b53c3406bea8be8b7f4ef52cd40 2b7d4d1835dedc0e67933fd4c014f841c395b15c