@@ -18,6 +18,12 @@ Install and start PostgreSQL.
 select 'POstgres' as password for db user or select any password of choice. Be sure to remember the password. 
 If 'POstgres' is not used, some changes will be required in configuration files. Hence be sure to remember it.
 
+### Run PostgreSQL
+
+Install and start PostgreSQL.
+
+create database 'tourreserve'.
+
 #### Insert test data
 
 It is assumed that maven is already installed.
@@ -27,7 +33,9 @@ If it is set to any other password, then update the password in terasoluna-tourr
 
 Execute the below command:
 
-	$ mvn -f terasoluna-tourreservation-initdb/pom.xml sql:execute
+	$ cd terasoluna-tourreservation-initdb
+	$ mvn sql:execute
+	$ cd ..
 
 Test data is currently available in Japanese only.
 
@@ -36,7 +44,7 @@ Test data is currently available in Japanese only.
 If db user password is not set to 'POstgres', then go to terasoluna-tourreservation-env/src/main/resources/META-INF/spring/tourreservation-infra.properties and update the password. If it is set to 'POstgres', no changes are required.
 
 	$ mvn -f terasoluna-tourreservation-parent/pom.xml install
-	$ mvn -f terasoluna-tourreservation-env/pom.xml intalll
+	$ mvn -f terasoluna-tourreservation-env/pom.xml install
 	$ mvn -f terasoluna-tourreservation-domain/pom.xml install
 
 #### Build war
@@ -46,6 +54,8 @@ If db user password is not set to 'POstgres', then go to terasoluna-tourreservat
 #### Deploy war
 
 Deploy `terasoluna-tourreservation-web/target/terasoluna-tourreservation-web.war` to your Application server (ex. Tomcat7)
+
+You can also use `mvn tomcat7:run` to test this application quickly with option `MAVEN_OPTS=-XX:MaxPermSize=256m` in environment variable.
 
 access http://localhost:8080/terasoluna-tourreservation-web
 
